# shapes

./: .editorconfig  .gitattributes  .gitignore  README.md  shapes.code-workspace  workspace.code-workspace
cplusplus/: .clang-format  .clang-tidy  .clangd  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel
cplusplus/include/: shapes.hpp
cplusplus/include/shapes/base/: commons.hpp  models.hpp
cplusplus/include/shapes/client/: shell.hpp
cplusplus/src/app/: main.cpp
cplusplus/src/base/commons/: base-shape.cpp  dimensional.cpp  displayable.cpp
cplusplus/src/base/models/: circle.cpp  rectangle.cpp  square.cpp
cplusplus/src/client/shell/: handler.cpp  handler.hpp  input-reader.cpp  input-reader.hpp  runner.cpp
cplusplus/tests/: commons-test.cpp  models-test.cpp
cplusplus/tests/fixtures/: fixtures.hpp
csharp/: .editorconfig  .gitignore  Directory.Build.props  Directory.Packages.props  README.md  Shapes.sln  Shapes.slnx  global.json
csharp/.config/: dotnet-tools.json
csharp/Src/Shapes/: Shapes.cs  Shapes.csproj
csharp/Src/Shapes.App/: Shape.App.cs  Shapes.App.cs  Shapes.App.csproj
csharp/Src/Shapes.Tests/: CommonsTests.cs  Fixtures.cs  ModelsTests.cs  Shapes.Tests.csproj
csharp/Src/Shapes.Tests/Fixtures/: Helper.cs
csharp/Src/Shapes/App/: Program.cs
csharp/src-temp/Shapes/: Shapes.csproj
csharp/src/Shapes/App/: App.cs
csharp/test/Shapes.Test/: CommonsTests.cs  ModelsTests.cs  Shapes.Test.csproj
csharp/test/Shapes.Test/Fixtures/: Helper.cs
csharp/test/Shapes.Tests/: Shapes.Test.csproj
d/: .editorconfig  .gitignore  Makefile  dub.json  dub.settings.json
d/source/shapes/: package.d
d/source/shapes/app/: package.d
d/tests/: commonstest.d  modelstest.d
d/tests/fixtures/: helper.d  package.d
dart/: .gitignore  analysis_options.yaml  dart_test.yaml  pubspec.yaml  pubspec_overrides.yaml
dart/lib/base/: commons.dart  models.dart
dart/lib/client/: shell.dart
dart/test/: commons_test.dart  models_test.dart
dart/test/fixtures/: fixtures.dart
elixir/: .credo.exs  .dialyzer_ignore.exs  .formatter.exs  .gitignore  mix.exs
elixir/lib/: shapes.ex
elixir/lib/shapes/app/: main.ex
elixir/lib/shapes/base/: commons.ex  models.ex
elixir/test/shapes/: commons_test.exs  models_test.exs
elixir/test/shapes/fixtures/: helper.ex
go/: .gitignore  go.mod  revive.toml  staticcheck.conf  taskfile.dist.yml
go/app/: app.go
go/base/commons/: base-shape.go  commons.go  dimensional.go  displayable.go
go/base/models/: circle.go  rectangle.go  square.go
go/client/shell/: handler.go  reader.go  runner.go
go/test/: commons_test.go  models_test.go
go/test/fixtures/: helper.go
haskell/: .gitignore  .hlint.yaml  cabal.project  cabal.project.local  fourmolu.yaml  package.yaml  shapes.cabal  stack.yaml
haskell/app/: Main.hs
haskell/app/Shapes/App/: Main.hs
haskell/src/: Shapes.hs
haskell/src/Shapes/Base/: Commons.hs  Models.hs
haskell/src/Shapes/Base/Commons/: BaseShape.hs  Dimensional.hs  Displayable.hs
haskell/src/Shapes/Base/Models/: Circle.hs  Rectangle.hs  Square.hs
haskell/src/Shapes/Client/: Shell.hs
haskell/src/Shapes/Client/Shell/: Handler.hs  InputReader.hs  Runner.hs
haskell/test/: CommonsTest.hs  Fixtures.hs  ModelsTest.hs
haskell/test/Fixtures/: Helper.hs
java/: .gitignore  eclipse-formatter.xml  pom.xml
kotlin/: .gitignore  build.gradle.kts  settings.gradle.kts
kotlin/gradle/: libs.versions.toml
php/: .editorconfig  .gitignore  .php-cs-fixer.dist.php  .prettierrc.json  composer.json  package.json  phpunit.dist.xml  prettier.config.js  psalm.dist.xml
php/src/: Shapes.php
php/src/Base/Commons/: BaseShape.php  Commons.php  Dimensional.php  Displayable.php
php/src/Base/Models/: Circle.php  Models.php  Rectangle.php  Square.php
php/src/Client/Shell/: Handler.php  InputReader.php  Runner.php  Shell.php
php/tests/: CommonsTest.php  ModelsTest.php
php/tests/Fixtures/: Fixtures.php  Helper.php
python/: .gitignore  .pylintrc  pdm.toml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
python/src/shapes/app/: __main__.py
python/src/shapes/base/commons/: __init__.py  base_shape.py  dimensional.py  displayable.py
python/src/shapes/base/models/: __init__.py  circle.py  rectangle.py  square.py
python/src/shapes/client/shell/: handler.py  input_reader.py  runner.py
python/tests/: test_commons.py  test_models.py
python/tests/fixtures/: __init__.py
ruby/: .gitignore  .reek.yml  .rspec  .rubocop.yml  Gemfile  Rakefile  shapes.gemspec
ruby/.bundle/: config
ruby/exe/: shapes-app
ruby/lib/: shapes.rb
ruby/lib/shapes/base/: commons.rb  models.rb
ruby/lib/shapes/client/: shell.rb
ruby/spec/: commons_spec.rb  models_spec.rb
ruby/spec/fixtures/: fixture.rb
ruby/test/: commons_test.rb  models_test.rb
ruby/test/fixtures/: helper.rb
rust/: .gitignore  Cargo.toml  rustfmt.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
rust/src/base/commons/: base_shape.rs  dimensional.rs  displayable.rs  mod.rs
rust/src/base/models/: circle.rs  rectangle.rs  (+1 more)
rust/tests/: commons_test.rs  models_test.rs
rust/tests/fixtures/: helper.rs
scala/: .gitignore  .gitignore-old  .sbtopts  .scalafix.conf  .scalafmt.conf  build.sbt
scala/project/: plugins.sbt
swift/: .gitignore  .spi.yaml  .swift-format  .swiftint.yml  CMakeLists.txt  Package.resolved  Package.swift
swift/Sources/Shapes/: Shapes.swift
swift/Sources/ShapesApp/: main.swift
swift/Sources/ShapesBaseCommons/: BaseShape.swift  Dimensional.swift  Displayable.swift
swift/Sources/ShapesBaseModels/: Circle.swift  Rectangle.swift  Square.swift
swift/Sources/ShapesClientShell/: Handler.swift  InputReader.swift  Runner.swift
swift/Tests/ShapesTests/: CommonsTests.swift  ModelsTests.swift
swift/Tests/ShapesTestsFixtures/: Fixtures.swift  Helper.swift
test/: .clangd  hello.cpp  hello.cppm
typescript/: .gitignore  eslint.config.ts  package.json  pnpm-lock.yaml  prettier.config.ts  tsconfig.json  turbo.json  vitest.config.ts
typescript/tests/: commons.test.ts  models.test.ts
typescript/tests/fixtures/: helper.ts
(+112 files in other folders)
