cabal-version:      3.14
name:               shapes
version:            1.0.0.0
-- synopsis:
-- description:
license:            ISC
-- license-file:       LICENSE
author:             AlterSabeh
maintainer:         betamaximum22@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Shapes,
        Shapes.Base.Commons,
        Shapes.Base.Models,
        Shapes.Client.Shell,
    other-modules:
        Shapes.Base.Commons.BaseShape,
        Shapes.Base.Commons.Dimensional,
        Shapes.Base.Commons.Displayable,
        Shapes.Base.Models.Circle,
        Shapes.Base.Models.Rectangle,
        Shapes.Base.Models.Square,
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   src
    default-language: GHC2024

executable shapes-app
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.0.0,
        shapes

    hs-source-dirs:   app
    default-language: GHC2024

test-suite shapes-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        shapes
